--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,9 +1,18 @@
 @import "~bootstrap/scss/bootstrap";
 
 body {
-  background-color: pink;
+  background: url(https://jooinn.com/images/brown-wooden-planks-2.jpg) no-repeat center center fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+  margin-top: 75px;
 }
 
 .hide {
   display: none;
+}
+
+h1 {
+  color:white;
 }
